--- a/test/debug.css
+++ b/test/debug.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
 }
 
-quantum-tabs {
+quantum-tab {
     --color: darkblue;
     --background-color: none;
     --letter-spacing: 0.1em;
@@ -17,40 +17,40 @@ quantum-tabs {
     --cursor: pointer;
 }
 
-quantum-tabs:hover:not([disabled]) {
+quantum-tab:hover:not([disabled]) {
     --color: blue;
     --background-color: aliceblue;
 }
 
-quantum-tabs[disabled] {
+quantum-tab[disabled] {
     --color: gray;
     --cursor: default;
 }
 
-quantum-tabs[theme=border] {
+quantum-tab[theme=border] {
     --transition: border 0.1s;
     --border: solid var(--color) 1px;
 }
 
-quantum-tabs[theme=raise] {
+quantum-tab[theme=raise] {
     --transition: box-shadow 0.1s;
     --box-shadow: 1px 1px 3px -1px black;
 }
 
-    quantum-tabs[theme=raise]:hover:not([disabled]) {
+    quantum-tab[theme=raise]:hover:not([disabled]) {
         --box-shadow: 2px 3px 4px -1px grey;
     }
 
-quantum-tabs[theme=accent] {
+quantum-tab[theme=accent] {
     --color: snow;
     --background-color: navy;   
 }
 
-    quantum-tabs[theme=accent]:hover:not([disabled]) {
+    quantum-tab[theme=accent]:hover:not([disabled]) {
         --color: white;
         --background-color: royalblue;  
     }
 
-quantum-tabs[theme=round] {
+quantum-tab[theme=round] {
     --border-radius: 100px;  
 }
